fix(avo-2771): ensure tabs and scrollbar don't go through options menu
https://meemoo.atlassian.net/browse/AVO-2771

--- a/src/assignment/components/AssignmentHeading.scss
+++ b/src/assignment/components/AssignmentHeading.scss
@@ -103,6 +103,8 @@
 	&__bottom {
 		overflow-x: auto;
 		overflow-y: hidden;
+		z-index: 0;
+		position: relative;
 
 		// Don't overwrite .o-container on wide screens
 		@media screen and (max-width: ($g-bp2 - 1px)) {
